# ReportExcel

./: .gitignore  .pre-commit-config.yaml  353892f6-24a3-4a01-802a-4e1638375474.xlsx  main.py  pyproject.toml  test.xlsx
src/bot/: __init__.py  excel.py  mail_dealer.py  share_point.py  web_access.py
src/common/: __init__.py  decorator.py
