[project]
name = "report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pre-commit>=4.2.0",
    "pywinauto>=0.6.9",
    "ruff>=0.11.5",
    "selenium>=4.31.0",
]
